# RAG-against-the-machine

./: .gitignore  Makefile  README.md  pyproject.toml
src/: chunking.py  main.py  storing.py
src/models/: __init__.py  models.py
